fix(procedure): fix badge alignment

--- a/app/assets/stylesheets/procedure_list.scss
+++ b/app/assets/stylesheets/procedure_list.scss
@@ -30,6 +30,7 @@
 
     height: 93px;
     width: 93px;
+    min-width: 93px;
     margin-right: 3 * $default-spacer;
     background-position: 95% 50%;
   }
