--- a/app/assets/stylesheets/procedure_logo.scss
+++ b/app/assets/stylesheets/procedure_logo.scss
@@ -10,5 +10,6 @@
   border: 1px solid $border-grey;
   height: 84px;
   width: 84px;
+  min-width: 84px;
   margin-right: $default-padding;
 }
